--- a/deploy-compose.yml
+++ b/deploy-compose.yml
@@ -5,7 +5,7 @@ services:
     #   context: .
     #   dockerfile: Dockerfile.multi
     #   target: api-build
-    image: ghcr.io/danny-avila/librechat-dev-api:latest
+    image: ghcr.io/danny-avila/librechat:latest
     container_name: LibreChat-API
     ports:
       - 3080:3080
@@ -24,20 +24,20 @@ services:
     volumes:
       - ./images:/app/client/public/images
       - ./librechat.yaml:/app/librechat.yaml
-  client:
-    build:
-      context: .
-      dockerfile: Dockerfile.multi
-      target: prod-stage
-    container_name: LibreChat-NGINX
-    ports:
-      - 80:80
-      - 443:443
-    depends_on:
-      - api
-    restart: always
-    volumes:
-      - ./client/nginx.conf:/etc/nginx/conf.d/default.conf
+  # client:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile.multi
+  #     target: prod-stage
+  #   container_name: LibreChat-NGINX
+  #   ports:
+  #     - 80:80
+  #     - 443:443
+  #   depends_on:
+  #     - api
+  #   restart: always
+  #   volumes:
+  #     - ./client/nginx.conf:/etc/nginx/conf.d/default.conf
   mongodb:
     container_name: chat-mongodb
     # ports:  # Uncomment this to access mongodb from outside docker, not safe in deployment
@@ -49,7 +49,7 @@ services:
     command: mongod --noauth
   meilisearch:
     container_name: chat-meilisearch
-    image: getmeili/meilisearch:v1.0
+    image: getmeili/meilisearch:v1.6
     # ports: # Uncomment this to access meilisearch from outside docker
     #   - 7700:7700 # if exposing these ports, make sure your master key is not the default value
     env_file:
